DPA-67: Refactor search functionality